# cc-switch-mcp

./: .gitignore  .npmignore  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  GITHUB_SETUP.md  INTEGRATION_PLAN.md  LICENSE  NPM_PUBLISH_GUIDE.md  PROJECT_COMPLETE.md  PROJECT_SUMMARY.md  PUBLISH_GUIDE.md  README.md  README_CN.md  REFACTOR_PLAN.md  build-and-test.bat  mcp-config-example.json  package.json  publish.ps1  publish.sh  test-integration.ps1  test.bat  test.sh
.github/workflows/: release.yml
cc-switch/src-tauri/: Cargo.toml  build.rs
cc-switch/src-tauri/src/: app_store.rs  config.rs  lib.rs  main.rs
cc-switch/src-tauri/src/database/: mod.rs
cc-switch/src-tauri/src/proxy/: mod.rs  server_stub.rs
cc-switch/src-tauri/src/services/: mod.rs  proxy.rs
scripts/: create-packages.js  install.js
src/: config_service.rs  config_sync.rs  core.rs  database.rs  error.rs  lib.rs  main.rs  mcp_server.rs  mcp_server_tests.rs  provider.rs  provider_core.rs  provider_service.rs
