[package]
name = "cc-switch-mcp"
version = "0.2.0"
edition = "2021"
rust-version = "1.85.0"
description = "MCP Server for CC Switch - Provider management for Claude Code, Codex, Gemini CLI, OpenCode & OpenClaw"
authors = ["CC Switch Team"]
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-util", "sync", "process"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Config paths
dirs = "5.0"
toml = "0.8"
toml_edit = "0.22"

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "cc-switch-mcp"
path = "src/main.rs"